src/design/nero-theme.scss
@import 'common';

// Nero colors
$text-color-light: #fff;
$text-color-fallback: #b7b7b7;
$text-disabled-color: #666666;

// Background colors
$background-white-color: #ffffff;
$background-grey-color: #f5f5f5;
$disabled-background-color: #ccc;
$menu-selected-background-color: $background-hover-color;

$dropdown-background-color: $background-grey-color;
$input-background-color: $background-grey-color;

// Border
$border-nero: 1px solid #f4f4f4;
$border-radius-nero: 6px;

// Z-indexes
$modal-z-index: 100;

// Global classes extends
%item-shadow {
  box-shadow: 0 2px 14px rgba(0, 0, 0, 0.2);
}

%nero-btn-like {
  font-family: inherit;
  border-radius: $border-radius-nero;
  padding: 15px 15px;
  text-align: center;
  border: none;
  cursor: pointer;
  display: inline-block;
}

%nero-input {
  font-family: inherit;
  font-size: inherit;
  background-image: none;
  box-shadow: none;
  width: 100%;
  padding: 0;
  outline: none;
  border: 0;
  border-bottom: 1px solid $text-disabled-color;
  padding: 14px 16px;

  &:disabled {
    @extend %nero-disable;
  }
}

%nero-disable {
  cursor: not-allowed;
  box-shadow: none;
  background-color: $disabled-background-color;
  color: $text-disabled-color;
}

.default-bg {
  background: $input-background-color;
}

.disabled {
  @extend %nero-disable;
}

// Autocomplete
.base-autocomplete {
  border: $border-nero;
  border-radius: $border-radius-nero;

  @extend %item-shadow;

  .filter {
    border-bottom: $border-nero;
  }
}

// Button
.base-button {
  &:disabled {
    @extend %nero-disable;
  }

  &.button {
    @extend %nero-btn-like;
  }

  &.circle {
    @extend %nero-btn-like;
    border-radius: 50%;
    width: 30px;
    height: 30px;
    padding: 0;
    line-height: 30px;
  }

  &.button:enabled:hover,
  &.circle:enabled:hover {
    filter: brightness(115%);
    @include transition(filter, 0.2s, linear);
  }

  &.cancel {
    background-color: $background-grey-color;

    &:enabled:hover {
      background-color: $menu-selected-background-color;
      filter: none;
      @include transition(background-color, 0.2s, linear);
    }
  }

  &.delete {
    background-color: $error-color;
    color: $text-color-light;
  }
}

// Checkbox
.base-checkbox {
  .checkmark {
    border-radius: $border-radius-nero;

    &.disabled {
      background-color: $disabled-background-color
    }
  }
}

// ConfirmModal

// Dropdown
.base-dropdown .button {
  @extend %nero-btn-like;
  background-color: $dropdown-background-color;
  width: 100%;
  height: 100%;

  &:enabled:hover {
    background-color: $menu-selected-background-color;
    @include transition(background-color, 0.2s, linear);
  }

  &:disabled {
    @extend %nero-disable;
  }
}

// Input
.base-input {
  @extend %nero-input;
}

// Popup
// Radio button
.checkmark.disabled {
  background-color: $disabled-background-color
}

// Spinner
// Tabs
.base-tab {

  &.disabled {
    @extend %nero-disable;
  }
}

// Tags input
.base-tags-input {
  @extend %nero-input;
}

// Toggle switch
.base-switch {
  input:disabled + .slider {
    background-color: $disabled-background-color;
  }
}

// User picture
// Window

